--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Autofac" Version="6.4.0" />
+      <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.1" />
+      <PackageReference Include="Castle.Core" Version="4.4.0" />
+      <PackageReference Include="FluentValidation" Version="11.0.2" />
+    </ItemGroup>
+
 </Project>
